album import status API improvments